2006-06-22  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/clientconf.c (parse_client_conf): Fix segmentation fault.
	* server-src/conffile.c (parse_server_conf): Fix segmentation fault.

2006-06-20  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/security-util.c: ignore EINTR in net_writev.

2006-06-19  Jean-Louis Martineau <martineau@zmanda.com>
	* docs/wishlist.txt: Remove features done in 2.5.0/2.5.1

2006-06-19  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amanda.conf.5.xml: amrecover_check_label and
					    amrecover_do_fsf default to yes.
	* server-src/conffile (init_dumptype_defaults): DUMPTYPE_INDEX set to 1.
	* server-src/diskfile.c (parse_diskline): index set from
						  dumptype_get_index.

2006-06-16  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amstatus.pl.in: Match quotes in DONE line.

2006-06-16  Jean-Louis Martineau <martineau@zmanda.com>
	* amandad-src/amandad.c   : Use strcasecmp to compare auth.
	* client-src/selfcheck.c  : Ditto
	* client-src/sendbackup.c : Ditto
	* restore-src/amidxtaped.c: Ditto
	* server-src/amindexd.c   : Ditto

2006-06-16  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amindexd.c (reply, lreply, fast_lreply): Correct use
	  of arglist_start and arglist_end..
	* server-src/amindexd.c (lreply_backend): Remove function.

2006-06-16  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/bsd-security.c (stream_read_callback): Send error to the
							    callback.

2006-06-16  Jean-Louis Martineau <martineau@zmanda.com>
	* recover-src/extract_list.c: Typo.
	* restore-src/restore.c: Typo.

2006-06-16  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/clientconf.c: Allow include.
	* client-src/clientconf.c (read_confline): Don't crash.
	* server-src/conffile.c (read_confline): Don't crash.
	* recover-src/amrecover.c: Exit if error in conf file.

2006-06-16  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/arglist.h: Typo.